[package]
name = "api"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]
edition = "2018"

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier"}

env_logger = "0.5.6"
hex = "0.3.2"
log = "0.4.1"
opendht = { git = "https://github.com/savoirfairelinux/opendht/" }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocket_cors = "0.5.2"
reqwest = "0.9.5"
rmp-serde = "0.14.0"
rust-crypto = "^0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
subtle = {version = "2", features = ["nightly"]}
uuid = { version = "0.7", features = ["v4"] }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["ec_secp256k1"]

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dev-dependencies]
criterion = "0.2"
