[package]
name = "MultipartyThreshold"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier"}


hex = "0.3.2"
subtle = {version = "2", features = ["nightly"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = {version = "0.9.5", default-features = false}
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["ec_secp256k1"]

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dev-dependencies]
criterion = "0.2"
